# snake_game

./: CMakeLists.txt  main.cpp  snake.cpp  snake.h
tests/: test_snake.cpp
